trunk/Archive2/82/c338aa0e147bd5/output
main.cpp:95:15: error: invalid argument type 'SyntaxAttr' to unary expression
    if (MSA & ~SyntaxAttr::GNU)
              ^~~~~~~~~~~~~~~~
main.cpp:97:12: error: invalid argument type 'SyntaxAttr' to unary expression
    MSA &= ~SyntaxAttr::GNU;
           ^~~~~~~~~~~~~~~~
2 errors generated.
